--- a/about/index.html
+++ b/about/index.html
@@ -124,7 +124,7 @@ Patrons will download an easy to use client for their Windows, Mac, or Linux com
 
 <h2 id="publically-funded-always-free">Publically funded, Always free</h2>
 
-<p>LibraryVPN was initially funded through a National Leadership Grant from the Institute of Museum and Library Services. As a project that started out publically funded we are committed that the code will always remain free and open source so you can use it without worry.</p>
+<p>LibraryVPN was initially funded through a National Leadership Grant from the Institute of Museum and Library Services. As a project that started out publically funded we are committed that the code will always remain free and open source so you can use it without worry!</p>
 
   </div>
 </section>
