--- a/about/index.html
+++ b/about/index.html
@@ -115,7 +115,7 @@ Patrons will download an easy to use client for their Windows, Mac, or Linux com
 <h2 id="standing-on-the-shoulders-of-giants">Standing on the shoulders of giants</h2>
 <p>LibraryVPN is built on proven open source solutions including OpenVPN, the gold standard for VPN security. The LEAP project has a proven track record of building secure software which has been used by activist organizations such as <a href="https://riseup.net">RiseUp</a> for years. LibraryVPN builds on these projects by adding an authentication layer using the SIP2 protocol to allow patrons to use their library cards to log into the VPN client</p>
 <h2 id="publically-funded-always-free">Publically funded, Always free</h2>
-<p>LibraryVPN was initially funded through a National Leadership Grant from the Institute of Museum and Library Services. As a project that started out publically funded we are committed that the code will always remain free and open source so you can use it without worry!</p>
+<p>LibraryVPN was initially funded through a National Leadership Grant from the Institute of Museum and Library Services. As a project that started out publically funded we are committed that the code will always remain free and open source so you can use it without worry.</p>
 
   </div>
 </section>
