--- a/about/index.html
+++ b/about/index.html
@@ -61,6 +61,9 @@ Patrons will download an easy to use client for their Windows, Mac, or Linux com
           <a href="/beta" class="navbar-item is-secondary">
             Get Involved
           </a>
+          <a href="/libraries" class="navbar-item is-secondary">
+            Libraries
+          </a>
         </div>
       </div>
   </div>
@@ -93,6 +96,9 @@ Patrons will download an easy to use client for their Windows, Mac, or Linux com
         </a>
         <a href="/beta" class="navbar-item is-secondary">
           Get Involved
+        </a>
+        <a href="/libraries" class="navbar-item is-secondary">
+          Libraries
         </a>
       </div>
     </div>
