--- a/faq/index.html
+++ b/faq/index.html
@@ -57,6 +57,9 @@
           <a href="/beta" class="navbar-item is-secondary">
             Get Involved
           </a>
+          <a href="/libraries" class="navbar-item is-secondary">
+            Libraries
+          </a>
         </div>
       </div>
   </div>
@@ -89,6 +92,9 @@
         </a>
         <a href="/beta" class="navbar-item is-secondary">
           Get Involved
+        </a>
+        <a href="/libraries" class="navbar-item is-secondary">
+          Libraries
         </a>
       </div>
     </div>
