--- a/faq/why-do-i-need-a-vpn/index.html
+++ b/faq/why-do-i-need-a-vpn/index.html
@@ -61,6 +61,9 @@ In contrast, a VPN provides an encrypted tunnel that all the web traffic passes 
           <a href="/beta" class="navbar-item is-secondary">
             Get Involved
           </a>
+          <a href="/libraries" class="navbar-item is-secondary">
+            Libraries
+          </a>
         </div>
       </div>
   </div>
@@ -93,6 +96,9 @@ In contrast, a VPN provides an encrypted tunnel that all the web traffic passes 
         </a>
         <a href="/beta" class="navbar-item is-secondary">
           Get Involved
+        </a>
+        <a href="/libraries" class="navbar-item is-secondary">
+          Libraries
         </a>
       </div>
     </div>
