--- a/faq/why-do-i-need-a-vpn/index.html
+++ b/faq/why-do-i-need-a-vpn/index.html
@@ -61,6 +61,9 @@ In contrast, a VPN provides an encrypted tunnel that all the web traffic passes 
           <a href="/beta" class="navbar-item is-secondary">
             Get Involved
           </a>
+          <a href="/libraries" class="navbar-item is-secondary">
+            Libraries
+          </a>
         </div>
       </div>
   </div>
@@ -94,6 +97,9 @@ In contrast, a VPN provides an encrypted tunnel that all the web traffic passes 
         <a href="/beta" class="navbar-item is-secondary">
           Get Involved
         </a>
+        <a href="/libraries" class="navbar-item is-secondary">
+          Libraries
+        </a>
       </div>
     </div>
 </div>
@@ -109,7 +115,6 @@ In contrast, a VPN provides an encrypted tunnel that all the web traffic passes 
       </div>
     </div>
     <p>HTTPS is very important for security. It provides end to end encryption of your content. You can think of this like an envelope on a letter. Unlike a postcard (http), people can no longer read the contents, but they can still find out lots of information (metadata) such as who is sending the information, who they are sending it to, and how much the two are talking.</p>
-
 <p>In contrast, a VPN provides an encrypted tunnel that all the web traffic passes through. All anyone who is listening can tell is that traffic is going to a single server (the VPN server). They can&rsquo;t tell anything about its final destination, or how many sites the person is visiting. Additionally, the web server at the other end sees all the traffic as originating with the VPN server rather than the individual. This provides a measure of anonymity that can prevent tracking from site to site and violating your privacy against your wishes.</p>
 
   </div>
