--- a/beta/index.html
+++ b/beta/index.html
@@ -62,7 +62,7 @@ This program will start in the 3rd quarter of 2020 and should go for six months.
             Get Involved
           </a>
           <a href="/libraries" class="navbar-item is-secondary">
-            libraries
+            Libraries
           </a>
         </div>
       </div>
@@ -98,7 +98,7 @@ This program will start in the 3rd quarter of 2020 and should go for six months.
           Get Involved
         </a>
         <a href="/libraries" class="navbar-item is-secondary">
-          libraries
+          Libraries
         </a>
       </div>
     </div>
