--- a/faq/what-is-wrong-with-current-vpn-offerings/index.html
+++ b/faq/what-is-wrong-with-current-vpn-offerings/index.html
@@ -63,7 +63,7 @@ The second problem is that using a VPN requires people to place their trust in w
             Get Involved
           </a>
           <a href="/libraries" class="navbar-item is-secondary">
-            libraries
+            Libraries
           </a>
         </div>
       </div>
@@ -99,7 +99,7 @@ The second problem is that using a VPN requires people to place their trust in w
           Get Involved
         </a>
         <a href="/libraries" class="navbar-item is-secondary">
-          libraries
+          Libraries
         </a>
       </div>
     </div>
