--- a/faq/why-do-i-need-a-vpn/index.html
+++ b/faq/why-do-i-need-a-vpn/index.html
@@ -62,7 +62,7 @@ In contrast, a VPN provides an encrypted tunnel that all the web traffic passes 
             Get Involved
           </a>
           <a href="/libraries" class="navbar-item is-secondary">
-            libraries
+            Libraries
           </a>
         </div>
       </div>
@@ -98,7 +98,7 @@ In contrast, a VPN provides an encrypted tunnel that all the web traffic passes 
           Get Involved
         </a>
         <a href="/libraries" class="navbar-item is-secondary">
-          libraries
+          Libraries
         </a>
       </div>
     </div>
