--- a/faq/why-is-this-the-librarys-role/index.html
+++ b/faq/why-is-this-the-librarys-role/index.html
@@ -62,7 +62,7 @@
             Get Involved
           </a>
           <a href="/libraries" class="navbar-item is-secondary">
-            libraries
+            Libraries
           </a>
         </div>
       </div>
@@ -98,7 +98,7 @@
           Get Involved
         </a>
         <a href="/libraries" class="navbar-item is-secondary">
-          libraries
+          Libraries
         </a>
       </div>
     </div>
