--- a/about/index.html
+++ b/about/index.html
@@ -62,7 +62,7 @@ Patrons will download an easy to use client for their Windows, Mac, or Linux com
             Get Involved
           </a>
           <a href="/libraries" class="navbar-item is-secondary">
-            libraries
+            Libraries
           </a>
         </div>
       </div>
@@ -98,7 +98,7 @@ Patrons will download an easy to use client for their Windows, Mac, or Linux com
           Get Involved
         </a>
         <a href="/libraries" class="navbar-item is-secondary">
-          libraries
+          Libraries
         </a>
       </div>
     </div>
