--- a/faq/index.html
+++ b/faq/index.html
@@ -58,7 +58,7 @@
             Get Involved
           </a>
           <a href="/libraries" class="navbar-item is-secondary">
-            libraries
+            Libraries
           </a>
         </div>
       </div>
@@ -94,7 +94,7 @@
           Get Involved
         </a>
         <a href="/libraries" class="navbar-item is-secondary">
-          libraries
+          Libraries
         </a>
       </div>
     </div>
