--- a/faq/why-should-i-use-a-vpn/index.html
+++ b/faq/why-should-i-use-a-vpn/index.html
@@ -61,7 +61,7 @@
             Get Involved
           </a>
           <a href="/libraries" class="navbar-item is-secondary">
-            libraries
+            Libraries
           </a>
         </div>
       </div>
@@ -97,7 +97,7 @@
           Get Involved
         </a>
         <a href="/libraries" class="navbar-item is-secondary">
-          libraries
+          Libraries
         </a>
       </div>
     </div>
