--- a/faq/index.html
+++ b/faq/index.html
@@ -139,7 +139,7 @@
     
 		<article id="18ee227d9bd3e7990d9e65a9edac9a4d">
 			<h2>Who is behind LibraryVPN?</h2>
-			<div class="item-content">	<p>LibraryVPN is an IMLS funded project. It is being developed by a partnership of libraries including <a href="https://leblibrary.com">the Lebanon Public Libraries</a>, <a href="https://www.westchesterlibraries.org/">the Westchester Library System</a>, and <a href="https://chplnj.org/">the Cherry hill Public Library</a> working with <a href="https://leap.se/">LEAP</a>. This software is free and opensource, so anyone who wishes to can install it and run it free of charge. We are currently investigated the possibility of a hosted version of this software for libraries that wish to use it, but don&rsquo;t want to host it for themselves.</p>
+			<div class="item-content">	<p>LibraryVPN is an IMLS funded project. It is being developed by a partnership of libraries including <a href="https://leblibrary.com">the Lebanon Public Libraries</a>, <a href="https://www.westchesterlibraries.org/">the Westchester Library System</a>, and T.J. Lamanna (of the Cherry Hill Public Library) working with <a href="https://leap.se/">LEAP</a>. This software is free and opensource, so anyone who wishes to can install it and run it free of charge. We are currently investigated the possibility of a hosted version of this software for libraries that wish to use it, but don&rsquo;t want to host it for themselves.</p>
  </div>
 		</article>
     
