--- a/about/index.html
+++ b/about/index.html
@@ -123,7 +123,7 @@ Patrons will download an easy to use client for their Windows, Mac, or Linux com
 <h2 id="publically-funded-always-free">Publically funded, Always free</h2>
 <p>LibraryVPN was initially funded through a National Leadership Grant from the Institute of Museum and Library Services. As a project that started out publically funded we are committed that the code will always remain free and open source so you can use it without worry.</p>
 <h2 id="beta-testing-libraryvpn">Beta Testing LibraryVPN</h2>
-<p>LibraryVPN is currently looking for libraries who are willing to beta test the VPN service. The software can currently be run in three different ways: self-hosted, cloud-hosted, or as SaaS. We will work with you to make any of these options work best for you. We are hoping you&rsquo;ll participate and allow up to gather user and library feedback on the product so we can continue to improve it. If you&rsquo;re interested please contact us at libraryvpn.riseup.net or follow us on Twitter @libraryvpn.</p>
+<p>LibraryVPN is currently looking for libraries who are willing to beta test the VPN service. The software can currently be run in three different ways: self-hosted, cloud-hosted, or as SaaS. We will work with you to make any of these options work best for you. We are hoping you&rsquo;ll participate and allow up to gather user and library feedback on the product so we can continue to improve it. If you&rsquo;re interested please contact us at <a href="mailto:libraryvpn@riseup.net">libraryvpn@riseup.net</a> or follow us on Twitter @libraryvpn.</p>
 
   </div>
 </section>
